--- a/UIKitElements/Base.lproj/Main.storyboard
+++ b/UIKitElements/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="6ye-Ku-P6z">
-                                <rect key="frame" x="16" y="79" width="361" height="337.66666666666669"/>
+                                <rect key="frame" x="16" y="79" width="361" height="532.66666666666663"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="kVW-ag-KF6">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
@@ -59,6 +59,29 @@
                                             <action selector="doneButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="3TE-UW-NzI"/>
                                         </connections>
                                     </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GHl-1L-2zG">
+                                        <rect key="frame" x="0.0" y="384.66666666666669" width="361" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hide datepicker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sB3-X4-2GL">
+                                                <rect key="frame" x="0.0" y="0.0" width="312" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" systemColor="systemGroupedBackgroundColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="C24-kq-1jf">
+                                                <rect key="frame" x="312" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="switchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="Vqs-nX-AJ3"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="c6T-yN-1wt">
+                                        <rect key="frame" x="0.0" y="462.66666666666663" width="361" height="70"/>
+                                        <connections>
+                                            <action selector="datePickerAction" destination="BYZ-38-t0r" eventType="valueChanged" id="0zR-KE-sLV"/>
+                                        </connections>
+                                    </datePicker>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -71,15 +94,17 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="datepicker" destination="c6T-yN-1wt" id="3y0-Le-UxQ"/>
                         <outlet property="mainLabel" destination="7hd-u1-V5B" id="TJJ-g5-lRt"/>
                         <outlet property="segmentedControl" destination="kVW-ag-KF6" id="O9Y-CZ-dNm"/>
                         <outlet property="slider" destination="48l-ed-FFv" id="BSG-aa-dV6"/>
-                        <outlet property="textField" destination="OV6-GI-pc4" id="pTo-X2-flc"/>
+                        <outlet property="switchLabel" destination="sB3-X4-2GL" id="HYL-RM-uEe"/>
+                        <outlet property="textField" destination="OV6-GI-pc4" id="lhc-OO-e0A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-146" y="5"/>
+            <point key="canvasLocation" x="-147.32824427480915" y="4.9295774647887329"/>
         </scene>
     </scenes>
     <resources>
@@ -88,6 +113,9 @@
         </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
